Update common classes packaging and naming (#17)